# workflow-orchestration-queue-charlie80-a

./: .ai-repository-summary.md  .application-plan-issue-body.md  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-ci.yml
docs/: architecture.md  implementation-plan.md  tech-stack.md
docs/debrief-and-document/: DEBRIEF_REPORT.md  trace.md
docs/validation/: VALIDATION_REPORT_create-agents-md-file_2026-03-22.md  VALIDATION_REPORT_create-project-structure_2026-03-22.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  debrief-report.md  interactive-report.html  workflow-plan.md
scripts/: validate-env.ps1  verify-python-env.sh
src/: __init__.py
src/config/: __init__.py  settings.py  validation.py
src/models/: __init__.py  work_item.py
src/notifier/: __init__.py
src/os_apow/: __init__.py  config.py  main.py
src/os_apow/models/: __init__.py  work_item.py
src/os_apow/notifier/: __init__.py  service.py
src/os_apow/orchestrator/: __init__.py  sentinel.py
src/os_apow/queue/: __init__.py  github_queue.py
src/queue/: __init__.py
test/: test-opencode-run.sh
tests/: __init__.py  conftest.py  test_placeholder.py  test_work_item.py
